syntax = "proto3";

package travel_base;

message Point{
double x = 1;
double y = 2;
}

message Rgb{
uint32 red = 1;
uint32 green = 2;
uint32 blue = 3;
}

message Rgba{
Rgb rgb = 1;
double opacity = 2;
}
message Color{
    oneof type{
    Rgb rgb = 1;
    Rgba rgba = 2;
    string color_name = 3;
    }
}

